# nanocalc

./: .gitignore  ARCHITECTURE.md  BEST_PRACTICES.md  Cargo.toml  DELIVERY_SUMMARY.md  DEPLOYMENT.md  EXPORT_SYSTEM.md  INDEX.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  ROADMAP.md  TECHNICAL_DECISIONS.md  nanocalc_spectrum.csv  nanocalc_spectrum.json
.github/workflows/: deploy.yml  release.yml
docs/: GITHUB_PAGES.md  index.html
docs/physics/: electronic_models.md  optical_models.md  thermal_models.md
src/: lib.rs  main.rs
src/app/: controller.rs  mod.rs  state.rs
src/compute/: engine.rs  mod.rs
src/core/: constants.rs  mod.rs  traits.rs  types.rs
src/export/: mod.rs
src/gui/: app.rs  mod.rs
src/gui/views/: mod.rs
src/gui/widgets/: mod.rs
src/physics/: mod.rs
src/physics/electronic/: mod.rs  traits.rs
src/physics/materials/: mod.rs
src/physics/optical/: mie.rs  mod.rs  traits.rs
src/physics/thermal/: mod.rs  traits.rs
src/plotting/: mod.rs
src/project/: mod.rs
src/utils/: mod.rs
