[package]
name = "nanocalc"
version = "0.1.0"
edition = "2021"
authors = ["Yafel G.H."]
description = "Scientific calculator for optical, thermal, and electronic properties of nanomaterials"
license = "MIT"
repository = "https://github.com/Lexharden/nanocalc"
keywords = ["nanoscience", "optics", "physics", "simulation"]
categories = ["science", "simulation"]

[lib]
name = "nanocalc"
path = "src/lib.rs"

[[bin]]
name = "nanocalc"
path = "src/main.rs"

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_plot = "0.29"

# Math & Science
nalgebra = "0.33"
num-complex = "0.4"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Plotting (for export)
plotters = { version = "0.3", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[features]
default = ["export_png"]
export_png = ["plotters"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Benchmarks will be added in future versions
# [[bench]]
# name = "computation_benches"
# harness = false
